<resources>
    <string name="login_wrong_cred">Your password and email do not match!</string>
    <string name="app_name">SoleX</string>
    <string name="signup">No account yet? Create one!</string>
    <string name="passwordHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="action_settings">Settings</string>
    <string name="btnPoduzece">Company</string>
    <string name="developer">Developer</string>
    <string name="account_create">Which account u want to create?</string>
    <string name="signup_yourself_as_a_developer">Signup yourself as a developer!</string>
    <string name="signup_your_company">Signup your company!</string>
    <string name="preferences">Preferences</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="removal_question">Do you wish to remove this item?</string>
    <string name="username">Username</string>
    <string name="load_data_from">Load data from web service by default?</string>
    <string name="app_lang_pref">Language preference</string>
    <string name="nav_header_info">foi@foi.hr</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="menu_list">List view</string>
    <string name="menu_map">Map view</string>
    <string name="menu_about">About app</string>
    <string name="dev_opt_collaborations">Collaborations</string>
    <string name="dev_opt_applications">Applications</string>
    <string name="dev_opt_search">Search projects</string>
    <string name="dev_opt_logout">Logout</string>
    <string name="dev_opt_profile">My profile</string>
    <string name="comp_opt_collaborations">Collaborations</string>
    <string name="comp_opt_favourites">Favourites</string>
    <string name="comp_opt_projects">My projects</string>
    <string name="comp_opt_logout">Logout</string>
    <string name="comp_opt_profile">My profile</string>
    <string name="drawer_additional">Additional</string>
    <string name="loginProgress">Logging in progress...</string>
    <string name="signupProgress">Creating account....</string>
    <string name="signupInfo">Your insert data is not correct!</string>
    <string name="enter_e_mail">enter e-mail</string>
    <string name="comp_web_page">Company web page</string>
    <string name="comp_director">Director</string>
    <string name="comp_num_employees">Number of employees</string>
    <string name="list_item_projects_collab">collaborations</string>
    <string name="project_state_1">Awaiting start</string>
    <string name="project_state_2">In process</string>
    <string name="project_state_3">Completed</string>
    <string name="project_state_4">Paused</string>
    <string name="project_state_5">Aborted</string>
    <string name="error_adding_skill">You must choose from sugested skills!</string>
    <string name="error_skill_exists">Skill already added!</string>
    <string name="company_proj_list_label">Company’s projects list</string>
    <string name="developer_proj_list_label">Developer’s projects list</string>
    <string name="projects_list"> projects list</string>
    <string name="applicants_label">Applicants</string>

    <string name="activity_developer_applications_ListLabel">List of all your applications</string>

    <!-- CollabApplicat-->
    <string name="tvDateStartedLabel">Started</string>
    <string name="tvDateApplicatedLabel">Applied</string>
    <string name="tvCollabModelLabel">Collaboration model</string>
    <string name="tvPaymentLabel">Agreed payment</string>

    <string name="collon">:</string>
    <string name="dash">-</string>


    <!--Applicants -->
    <string name="applied">Applied</string>
    <string name="with">with</string>
    <string name="perc_match">% match</string>

    <!--Developer applicating -->
    <string name="applicate">Applicate</string>
    <string name="withdraw">Withdraw application</string>
    <string name="num_applicants">Number of applicants</string>
    <string name="new_info">Enter new info</string>
    <string name="list_projects">List of your projects</string>
    <string name="create_new_project">Create new project</string>
    <string name="project_management">Project Management</string>
    <string name="new_collaboration">New Collaboration</string>
    <string name="collaborations">Collaborations</string>
    <string name="favourites">Favourites</string>
    <string name="search_projects">Search projects</string>
    <string name="previous_applications">Previous applications</string>
    <string name="project_listing">Project listing</string>
    <string name="project_display">Project display</string>
    <string name="needed_collaboration">Needed collaboration</string>
    <string name="job_opportunity">Job opportunity</string>
    <string name="my_projects">My projects</string>
    <string name="company_project_collab">_company: _project</string>
    <string name="collaboration_name">_collaboration_name</string>
    <string name="required_it_skills">Required IT skills</string>
    <string name="tvDeveloper">Developer:</string>
    <string name="tvDeveloper_name">_developer_name:</string>
    <string name="back_to_exit">Press Back again to Exit.</string>
    <string name="fill_data">Fill in all data</string>
    <string name="favorite_added">The user has been added to favourites</string>
    <string name="collab_rated">Collaboration has been rated</string>
    <string name="accept_application">Accept application</string>
    <string name="_project">_project</string>
    <string name="_collaboration_name">_collaboration_name</string>
    <string name="update">Update</string>
    <string name="company_name">Company Name</string>
    <string name="e_mail_contact">E-Mail contact</string>
    <string name="address">Address</string>
    <string name="highlighted_projects">Highlighted Projects</string>
    <string name="general_information">General Information</string>
    <string name="added_to_highlights">The project has been added to highlights</string>
    <string name="new_project">NEW PROJECT</string>
    <string name="add_new_favorite">Add new Favourite</string>
    <string name="add">Add</string>
    <string name="typeA_details">Associate has to work every day and the same amount as the other workers.</string>
    <string name="typeB_details">Associate has to work every day(Work time not really important)</string>
    <string name="typeA">Type A</string>
    <string name="typeB">Type B</string>
    <string name="typeC">Type C</string>
    <string name="typeD">Type D</string>
    <string name="typeE">Type E</string>
    <string name="typeC_details">Associate has to work until the end of the week to meet certain standard(Example. Until the end of the week he has to work for 30h</string>
    <string name="typeD_details">Associate has a deadline until which the functionality has to be finished.</string>
    <string name="typeE_details">Associate has to work at the same time as the other workers and be availabe via audio or video conferencing for close communication with the development team</string>
    <string name="OK">OK</string>
    <string name="CANCEL">CANCEL</string>
    <string name="new_needed_collaboration_created">New Needed Collaboration Has Been Created!</string>
    <string name="project_name">Project name</string>
    <string name="description">Description</string>
    <string name="project_description">Project description</string>
    <string name="completion_percentage">Completion(percentage)</string>

    <!-- update company -->
    <string name="enter_name">enter name</string>
    <string name="enter_address">enter address</string>
    <string name="webpage">Webpage</string>
    <string name="enter_webpage_address">Enter webpage address</string>
    <string name="director">Director</string>
    <string name="director_information">Director information</string>
    <string name="number_of_workers">Number of workers</string>
    <string name="enter_number_of_workers">Enter number of workers</string>
    <string name="update_data">Update data</string>
    <string name="profile_data_update">Profile data has been updated</string>
    <string name="your_name">Your name</string>
    <string name="your_surname">Your surname</string>
    <string name="enter_surname">enter surname</string>
    <string name="your_address">Your address</string>
    <string name="your_e_mail">Your e-mail</string>
    <string name="your_contact_number">Your contact number</string>
    <string name="enter_contact_number">enter contact number</string>
    <string name="your_years_of_experience">Your years of experience</string>
    <!-- search -->
    <string name="enter_experience">enter experience</string>
    <string name="enter_percentage">Enter percentage(0-100)</string>
    <string name="percentage_limitation">Percentage value has to be under 100!</string>
    <string name="choose_skill">Choose some skill</string>
    <string name="no_such_skill">"No such skill in our database "</string>
    <!-- signup -->
    <string name="all_fields">All fields must be filled</string>
    <string name="password_dont_match">Passwords don\'t match!</string>
    <string name="registration_success">Registration successful! Redirecting on login screen...</string>
    <string name="server_error">Couldn\'t contact server!</string>
    <!-- profile -->
    <string name="main_technologies">Main Technologies</string>
    <!-- favoriti -->
    <string name="add_your_favourite_collaboration">Add your favourite collaboration</string>
    <!--- search -->
    <string name="enter_matching_percentage">Enter matching percentage</string>
    <string name="search">Search</string>
    <string name="adapter_applications">" applications"</string>
    <string name="match">% match</string>
    <!-- dev profile -->
    <string name="it_skills">IT skills</string>
    <string name="projects">Projects</string>
    <string name="developer_favourites">The developer has been added to favourites</string>
    <string name="developer_favourite_delete">The developer has been deleted from favourites</string>
    <!-- add new project -->
    <string name="choose_state">Choose state</string>
    <string name="start_project">Start project</string>
    <string name="in_progress">In progress</string>
    <string name="finished">Finished</string>
    <string name="paused">Paused</string>
    <string name="stopped">Stopped</string>
    <string name="start_date">start date</string>
    <string name="project_state">Project state</string>
    <string name="save_project">Save project</string>

    <string name="removed_on_highlights">Project removed from highlighted!</string>
    <string name="project_created">The project has been created</string>
    <string name="updating_data">Updating data...</string>
    <string name="data_updated">Profile data has been updated</string>
    <string name="suc_application">Successful application</string>
    <string name="application_remove">Successful removal of your application</string>
    <string name="updating_developer">Updating data...</string>
    <string name="favourite_added">The favourite is already added</string>

</resources>
