<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/developer_opt_profile"
            android:icon="@mipmap/ic_home_white_24dp"
            android:title="@string/dev_opt_profile" />
        <item
            android:id="@+id/developer_opt_search"
            android:icon="@mipmap/ic_search_white_24dp"
            android:title="@string/dev_opt_search" />
        <item
            android:id="@+id/developer_opt_dev_projects"
            android:icon="@mipmap/ic_folder_white_24dp"
            android:title="@string/comp_opt_projects" />
        <item
            android:id="@+id/developer_opt_applications"
            android:icon="@mipmap/ic_developer_mode_white_24dp"
            android:title="@string/dev_opt_applications" />
        <item
            android:id="@+id/developer_opt_collaborations"
            android:icon="@mipmap/ic_people_white_24dp"
            android:title="@string/dev_opt_collaborations" />
        <item
            android:id="@+id/developer_opt_logout"
            android:icon="@mipmap/ic_exit_to_app_white_24dp"
            android:title="@string/dev_opt_logout" />
    </group>

    <item android:title="@string/drawer_additional">
        <menu>
            <item
                android:id="@+id/menu_about"
                android:icon="@mipmap/ic_info_white_24dp"
                android:title="@string/menu_about" />
        </menu>
    </item>
</menu>