<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/company_opt_profile"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/comp_opt_profile" />
        <item
            android:id="@+id/company_opt_projects"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/comp_opt_projects" />
        <item
            android:id="@+id/company_opt_collaborations"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/comp_opt_collaborations" />
        <item
            android:id="@+id/company_opt_favourites"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/comp_opt_favourites" />
        <item
            android:id="@+id/company_opt_logout"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/comp_opt_logout"
            />
    </group>
    <item android:title="@string/drawer_additional">
        <menu>
            <item
                android:id="@+id/menu_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/menu_about" />
        </menu>
    </item>
</menu>