<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="hr.foi.air.solex.activities.common.DrawerActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:id="@+id/activity_company_profile_scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="55dp">


            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_needed_collaboration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="hr.foi.air.solex.activities.companies.CompanyNeededCollaborationActivity">

                <TextView
                    android:id="@+id/activity_company_needed_collaboration_tvProjectName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/_project"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/activity_company_needed_collaboration_tvCollabName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/activity_company_needed_collaboration_tvProjectName"
                    android:layout_marginTop="8dp"
                    android:text="@string/_collaboration_name"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txtViewRequierdItSkills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/activity_company_needed_collaboration_tvCollabName"
                    android:layout_marginTop="5dp"
                    android:text="@string/required_it_skills"
                    android:textSize="18sp" />

                <ListView
                    android:id="@+id/activity_company_needed_collaboration_lvItSkills"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/txtViewRequierdItSkills"
                    android:layout_marginTop="1dp"
                    android:minHeight="100dp" />

                <TextView
                    android:id="@+id/activity_company_needed_collaboration_tvApplicantsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/activity_company_needed_collaboration_lvItSkills"
                    android:layout_marginTop="8dp"
                    android:text="@string/applicants_label"
                    android:textSize="20sp" />

                <ListView
                    android:id="@+id/activity_company_needed_collaboration_lvApplicants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/activity_company_needed_collaboration_tvApplicantsLabel"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:dividerHeight="3dp"
                    android:minHeight="100dp" />

                <Button
                    android:id="@+id/activity_company_needed_collaboration_btnAcceptApplicant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/activity_company_needed_collaboration_lvApplicants"
                    android:layout_centerInParent="true"
                    android:text="@string/accept_application"
                    android:textColor="@color/colorAccent"
                    android:layout_marginBottom="20dp"/>

            </RelativeLayout>

        </ScrollView>
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:visibility="visible"
        app:headerLayout="@layout/menu_drawer_header" />
</android.support.v4.widget.DrawerLayout>